--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <div class="home__data">
                             <h1 class="home__title">Hi, I'am Miljan</h1>
                             <h3 class="home__subtitle">Frontend developer</h3>
-                            <p class="home__description">Wed developer, with some experience, working in web technologies and Ui / Ux design.</p>
+                            <p class="home__description">Web developer, with some experience, working in web technologies and Ui / Ux design.</p>
                             <a href="#contact" class="button button--flex">
                                 Contact Me <i class="uil uil-message button__icon"></i>
                             </a>
@@ -128,6 +128,7 @@
 
                             <div class="skills__list">
                                 <p><img src="assets/img/html.png" alt="" class="skills__img"></p>
+                                <p><img src="assets/img/css.png" alt="" class="skills__img"></p>
                                 <p><img src="assets/img/sass.png" alt="" class="skills__img"></p>
                                 <p><img src="assets/img/js.png" alt="" class="skills__img"></p>
                             </div>
